Fix scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -63,3 +63,12 @@ strong {
 .mdx code {
   @apply p-1 text-base rounded-md;
 }
+
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
